<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">数字对讲系统</string>
    <string name="action_settings">设置</string>
    
    <string name="key_username">username</string>
    <string name="key_password">password</string>
    <string name="key_serverip">serverip</string>
	<string name="server_setting">服务器设置</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="serverip">服务器地址</string>
    
    <string name="call">呼叫</string>
    <string name="record_query">记录查询</string>
    <string name="monitor">监视</string>
    <string name="message">信息</string>
    <string name="smart_home">智能家居</string>
    <string name="security">安防</string>
    <string name="elevator">电梯召唤</string>
    <string name="accessory">附件</string>
    <string name="setting">设置</string>
    
    <string name="call_all">所有</string>
    <string name="call_incoming">呼入</string>
    <string name="call_outgoing">呼出</string>
    <string name="call_missed">未接</string>
    
    <string name="clear_record">清空记录</string>
    <string name="call_type">呼叫类型</string>
    <string name="call_user">呼叫对象</string>
    <string name="call_time">通话时间</string>
    <string name="call_period">通话时长</string>
    <string name="call_history">呼叫历史</string>
    
    <string name="call_hint">请输入对方号码</string>
    <string name="back">返回</string>
    
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="digit_0">0</string>
    
    <string name="hour">小时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    
    <string name="backspace">退格</string>
    <string name="clear">清空</string>

    <string name="answer">接听</string>
    <string name="hang_up">挂断</string>
    <string name="talking">通话中</string>
    
</resources>
